--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Sentient Weapon Observation Response Division</p>
     <p>Members include:</p>
     <ul>
-        <li><a href="https://i.bucklehq.com/homepage">Monica Rambeau</a></li>
+        <li><a href="https://i.bucklehq.com/homepage" target="_blank">Monica Rambeau</a></li>
         <li>Tyler Hayward</li>
     </ul>
     <p>working together...?</p>
