--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </ul>
     <p>working together...?</p>
     <button>Change user</button>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main.js" defer></script>
   </body>
 </html> 
