--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Sentient Weapon Observation Response Division</p>
     <p>Members include:</p>
     <ul>
-        <li><a href="https://i.bucklehq.com/homepage" target="_blank">Monica Rambeau</a></li>
+        <li><a href="https://jkarg.github.io/probable-robot/splash-page" target="_blank">Monica Rambeau</a></li>
         <li>Tyler Hayward</li>
     </ul>
     <p>working together...?</p>
