--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Sentient Weapon Observation Response Division</p>
     <p>Members include:</p>
     <ul>
-        <li><a href="https://jkarg.github.io/probable-robot/splash-page" title="DB structure" target="_blank">Monica Rambeau</a></li>
+        <li><a href="splash-page.html" title="DB structure" target="_blank">Monica Rambeau</a></li>
         <li>Tyler Hayward</li>
     </ul>
     <p>working together...?</p>
