--- a/splash-page.html
+++ b/splash-page.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>My splash page</title>
-  </head>
-  <body>
-    <p>This is my page</p>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>My splash page</title>
+</head>
+
+<body>
+  <!-- put navigation menu just below here -->
+  <ul>
+    <li>>Home</li>
+    <li><a href="pictures.html" title="Pictures">Pictures</a></li>
+    <li><a href="projects.html" title="Projects">Projects</a></li>
+    <li><a href="social.html" title="Social">Social</a></li>
+  </ul>
+
+  <h1>Homepage</h1>
+
+  <p>Welcome to my exciting splash page</p>
+</body>
+
 </html>
