--- a/literature.html
+++ b/literature.html
@@ -3,23 +3,22 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Social</title>
+    <title>Literature</title>
 </head>
 
 <body>
     <!-- put navigation menu just below here -->
     <ul>
         <li><a href="splash-page.html" title="Splash Page">Home</a></li>
-        <li><a href="literature.html" title="Literature">Literature</a></li>
+        <li>Literature</li>
         <li><a href="pictures.html" title="Pictures">Pictures</a></li>
         <li><a href="projects.html" title="Projects">Projects</a></li>
-        <li>Social</li>
+        <li><a href="social.html" title="Social">Social</a></li>
     </ul>
 
-    <h1>Social media</h1>
+    <h1>Literature</h1>
 
-    <p>Welcome to my social media page. I am currently antisocial, but will start putting my social media widgets on
-        here when the time is right.</p>
+    <p>My literature will go here, when I start writing some.</p>
 </body>
 
 </html>
