--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
     <!-- put navigation menu just below here -->
     <ul>
         <li><a href="splash-page.html" title="Splash Page">Home</a></li>
+        <li><a href="literature.html" title="Literature">Literature</a></li>
         <li><a href="pictures.html" title="Pictures">Pictures</a></li>
         <li>Projects</li>
         <li><a href="social.html" title="Social">Social</a></li>
