--- a/pictures.html
+++ b/pictures.html
@@ -10,6 +10,7 @@
     <!-- put navigation menu just below here -->
     <ul>
         <li><a href="splash-page.html" title="Splash Page">Home</a></li>
+        <li><a href="literature.html" title="Literature">Literature</a></li>
         <li>Pictures</li>
         <li><a href="projects.html" title="Projects">Projects</a></li>
         <li><a href="social.html" title="Social">Social</a></li>
