--- a/splash-page.html
+++ b/splash-page.html
@@ -10,6 +10,7 @@
   <!-- put navigation menu just below here -->
   <ul>
     <li>Home</li>
+    <li><a href="literature.html" title="Literature">Literature</a></li>
     <li><a href="pictures.html" title="Pictures">Pictures</a></li>
     <li><a href="projects.html" title="Projects">Projects</a></li>
     <li><a href="social.html" title="Social">Social</a></li>
