--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Projects</title>
+    <link rel="shortcut icon" href="paint-it-black.ico">
 </head>
 
 <body>
